something basic that kinda works :tada:

--- a/SmartHomeServer/build.gradle
+++ b/SmartHomeServer/build.gradle
@@ -25,7 +25,15 @@ dependencies {
 build {
     slice {
         java {
-            files = [file("./slice/Home.ice")]
+            files = [file("./slice/home.ice")]
+        }
+    }
+    doLast {
+//        project.mkdir('./pyclient/sliceGen')
+
+        exec {
+            workingDir '.'
+            commandLine 'slice2py', 'slice/home.ice', '--output-dir=client'
         }
     }
 }
