--- a/SmartHomeServer/config/server.cfg
+++ b/SmartHomeServer/config/server.cfg
@@ -3,14 +3,14 @@
 # "Hello". The following line sets the endpoints for this
 # adapter.
 #
-IceAdapter.Endpoints=tcp -h 127.0.0.2 -p 10000 -z -t 10000 : udp -h 127.0.0.2 -p 10000 -z
+IceAdapter.Endpoints=tcp -h localhost -p 10000:udp -h localhost -p 10000
 
-IceAdapter.ThreadPool.Size=10
+# IceAdapter.ThreadPool.Size=10
 
 #
 # Warn about connection exceptions
 #
-Ice.Warn.Connections=1
+# Ice.Warn.Connections=1
 
 #
 # Network Tracing
@@ -20,7 +20,7 @@ Ice.Warn.Connections=1
 # 2 = like 1, but more detailed
 # 3 = like 2, but also trace data transfer
 #
-Ice.Trace.Network=2
+# Ice.Trace.Network=2
 
 #
 # Protocol Tracing
